# derust_language

./: README.md
derust_lang/: shell.nix
derust_lang/grammar/: DeRust.pest  DeRust.pest_c
derust_lang/src/: derust_to_rust.rs  main.rs
rust_app/: Cargo.toml
rust_app/src/: main.drs  main.rs
trash/DeRust_pest/: 11DeRust.pest  test  test_函数定义.drs  test_函数定义.drs_  test_声明.drs  test_数字.drs  test_数字1.drs  test_条件表达式.drs
trash/derust_20230303/: Cargo.toml
trash/derust_lang_/: Cargo.toml  DeRust.pest
trash/derust_lang_/rust_app/src/: main.drs  main.rs
trash/derust_lang_/src/: main.rs
trash/derust_lang_/src/derust_to_rust/: mod.rs  to_rust_function.rs
trash/rust_app_a/: shell.nix
trash/rust_app_a/src/: main.drs  main.drs_  main.drs_0  main.rs
trash/test_pest_meta_1_src/: DeRust.pest  main.rs
