[package]
name = "derust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pest = "2.0"
# pest_derive = "2.0"
pest = "2.5.6"
pest_derive = "2.5.6"
printers = "1.2.0"
serde = "1.0.156"
serde_json = "1.0.94"
serde_derive = "1.0.156"
# rustfmt = "0.10.0"
